--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ fsspec==2024.9.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
+huggingface-hub==0.25.1
 idna==3.10
 Jinja2==3.1.4
 jiter==0.5.0
@@ -18,15 +19,21 @@ MarkupSafe==2.1.5
 mpmath==1.3.0
 networkx==3.3
 nltk==3.9.1
+numpy==2.1.1
+packaging==24.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
+safetensors==0.4.5
 setuptools==75.1.0
 sniffio==1.3.1
 sympy==1.13.3
 tiktoken==0.7.0
+tokenizers==0.20.0
 torch==2.4.1
 tqdm==4.66.5
+transformers==4.45.0
 typing_extensions==4.12.2
 urllib3==2.2.3
